<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.palmergames.bukkit.towny</groupId>
    <artifactId>towny</artifactId>
    <packaging>jar</packaging>
    <version>0.98.3.4</version>

    <licenses>
        <license>
            <name>CC BY-NC-ND 3.0</name>
            <url>http://creativecommons.org/licenses/by-nc-nd/3.0/</url>
            <comments>Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported</comments>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>TownyAdvanced</name>
        <url>https://github.com/TownyAdvanced</url>
    </organization>

    <properties>
        <java.version>17</java.version>
        <project.bukkitAPIVersion>1.16</project.bukkitAPIVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- For use with GitHub Package Registry -->
    <!-- Requires repo write access, and proper local maven configuration -->
    <!-- https://help.github.com/en/articles/about-github-package-registry -->
    <distributionManagement>
        <!-- This only needs to be un-commented for Release versions, when we want to upload to the cursed Github packages.
        <repository>
            <id>github</id>
            <name>GitHub TownyAdvanced Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/TownyAdvanced/Towny</url>
        </repository>-->
        <repository>
            <id>nexus</id>
            <name>Towny</name>
            <url>https://repo.glaremasters.me/repository/towny/</url>
        </repository>
    </distributionManagement>

    <scm>
        <connection>scm:git:https://github.com/TownyAdvanced/Towny.git</connection>
        <developerConnection>scm:git:https://github.com/TownyAdvanced/Towny.git</developerConnection>
        <url>https://github.com/TownyAdvanced/Towny</url>
    </scm>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://papermc.io/repo/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>tne-repo</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>ess-repo</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>
        <repository>
            <id>citizens-repo</id>
            <url>https://repo.citizensnpcs.co/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>sonatype-oss-snapshots</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.papermc</groupId>
            <artifactId>paperlib</artifactId>
            <version>1.0.6</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>Reserve</artifactId>
            <version>0.1.5.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>TheNewChat</artifactId>
            <version>1.5.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.bukkit</groupId>
                    <artifactId>bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.ess3</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.18.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.ElgarL</groupId>
            <artifactId>groupmanager</artifactId>
            <version>2.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizensapi</artifactId>
            <version>2.0.28-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <!-- Included in vanilla minecraft's JAR -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.9</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-compress -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.21</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>2.2.1</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.bsideup.jabel</groupId>
            <artifactId>jabel-javac-plugin</artifactId>
            <version>0.4.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <pluginRepositories>
        <pluginRepository>
            <id>apache.snapshots</id>
            <url>https://repository.apache.org/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>8</release>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>-Xplugin:jabel</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>16</source>
                    <doclint>all,-missing</doclint>
                </configuration>
            </plugin>
            <plugin>  <!-- Create sources.jar -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <configuration>
                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                    <artifactSet>
                        <includes>
                            <include>net.kyori:adventure-platform-bukkit</include>
                            <include>net.kyori:adventure-platform-api</include>
                            <include>net.kyori:adventure-api</include>
                            <include>net.kyori:adventure-text-serializer-craftbukkit</include>
                            <include>net.kyori:adventure-platform-facet</include>
                            <include>net.kyori:adventure-text-serializer-gson</include>
                            <include>net.kyori:adventure-text-serializer-legacy</include>
                            <include>net.kyori:adventure-key</include>
                            <include>net.kyori:adventure-text-serializer-gson-legacy-impl</include>
                            <include>net.kyori:adventure-text-serializer-bungeecord</include>
                            <include>net.kyori:adventure-platform-viaversion</include>
                            <include>net.kyori:adventure-nbt</include>
                            <include>net.kyori:examination-api</include>
                            <include>net.kyori:examination-string</include>
                            <include>com.zaxxer:HikariCP</include>
                            <include>io.papermc:paperlib</include>
                            <include>org.apache.commons:commons-compress</include>
                            <include>org.bstats:bstats-bukkit</include>
                            <include>org.bstats:bstats-base</include>
                            <include>org.json:json</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>io.papermc.lib</pattern>
                            <shadedPattern>com.palmergames.paperlib</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer.hikari</pattern>
                            <shadedPattern>com.palmergames.hikaricp</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.commons.compress</pattern>
                            <shadedPattern>com.palmergames.compress</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.kyori.adventure</pattern>
                            <shadedPattern>com.palmergames.adventure</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.kyori.examination</pattern>
                            <shadedPattern>com.palmergames.examination</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.palmergames.bukkit.metrics</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.MF</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>net.kyori:*</artifact>
                            <excludes>META-INF/versions/9/module-info.class</excludes>
                        </filter>
                    </filters>
                    <minimizeJar>true</minimizeJar>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

    <profiles>
        <profile>
            <id>no-apidoc</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <phase>none</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <!--
        <profile>
             Enforces JDK 9+ to generate safe bytecode when targeting Java 8.
             See: https://stackoverflow.com/questions/64868952/how-should-javac-11-link-methods-overridden-in-later-versions-with-a-java-8-targ
            <id>enforce-java-8-bytecode</id>
            <activation>
                Activate automatically for JDK 9+. No manual call needed.
                <jdk>[9,)</jdk>
            </activation>
            <properties>
                <maven.compiler.release>8</maven.compiler.release>
            </properties>
        </profile> -->
        <profile>
            <id>intellij-idea-only</id>
            <activation>
                <property>
                    <name>idea.maven.embedder.version</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>${java.version}</release>
                            <compilerArgs>
                                <arg>--enable-preview</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
